# mystic-ai

./: .gitignore  AGENTS.md  CONTRIBUTING.md  ETHICS.md  README.md  START_HERE.md
.cursor/: .gitignore
.cursor/agents/: ai-search-research.md
.cursor/rules/: ai-search-research.mdc
.github/workflows/: pages.yml
Mockups/: README.md
apps/desktop/: package-lock.json  package.json
apps/desktop/src/: app.css  app.html
apps/desktop/src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/lib/: ModelModeBar.svelte  chats.ts  context-meter.ts  llm.ts  public-searx.ts  rag.ts  search-pipeline.test.ts  tauri-invoke.ts
branches/: README.md
branches/miverna/: README.md  package-lock.json  package.json
branches/miverna/.cursor/: README.md
branches/miverna/.github/workflows/: ci.yml
branches/miverna/convex/: schema.ts  seed.ts  seedData.ts  seedPapersList.ts
branches/miverna/docs/: cursor-cloud-agent-ai-search.md  embedded-searxng.md
branches/miverna/scripts/: download-nemotron-model.sh
branches/mlx-gemma/: README.md  pyproject.toml
convex/: papers.ts  tsconfig.json
docs/: BRANDING_AUDIT_TASKS.md  HUB_INDEX.md  MONOREPO_V2_ROADMAP.md  README.md  RETIRED_PATHS.md
docs/employer/: README.md  case-agent-orchestration.md  case-brand-pipeline.md  case-desktop-mockups.md
infra/searxng/: docker-compose.yml  settings.yml
mockup/: glass.css  search-glass.html
src/mlx_gemma/: __init__.py
tools/codegen/: package.json
tools/codegen/test/: codegen.test.ts
(+29 files in other folders)
