[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-gemma"
version = "0.1.0"
description = "Development kit for Gemma 4 on Apple MLX (mlx-lm)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "mlx-gemma contributors" }]
keywords = ["mlx", "gemma", "gemma-4", "mlx-lm", "apple-silicon", "llm"]
dependencies = [
  "mlx>=0.25",
  "mlx-lm>=0.25",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8",
]

[project.urls]
Repository = "https://github.com/shahzebqazi/mlx-gemma"
Documentation = "https://github.com/shahzebqazi/mlx-gemma#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_gemma"]

[tool.ruff]
line-length = 100
target-version = "py310"
